<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NomJoueurFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nomJoueurBlanc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_joueurBlanc" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nomJoueurNoir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_joueurNoir" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_messageErreur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/rouge"/>

    <Button
        android:id="@+id/bouton_commencer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_commencerJeu" />


</LinearLayout>